<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragmentos.Fragment_mis_datos">

    <ImageView
        android:layout_width="435dp"
        android:layout_height="177dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account_circle_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/misdatos" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEditarNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtApellido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editarApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    //Contraseña
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtContraseña">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editarContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtDocumento_de_identidad">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editarDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtTelefono">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editarTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtDireccion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editarDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/editarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnEditar"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        />

</LinearLayout>